# wiznet_w5300_worspace

./: LICENSE  README.md  w5300_indirect_8_bit_uPy_basic_test.py
w5300_indirect_8_bit_pico_c_test/: CMakeLists.txt  main.c  main.h
w5300_network_info_test/: main.c  wizchip_conf.h
w5300_send_tcp/: CMakeLists.txt  main.c  main.h  w5300.h  wizchip_conf.c
w5300_socket_creation/: CMakeLists.txt  main.c  main.h
